Assessment: Use .toList() in getFeedbacksSorted to satisfy ArchitectureTest
Replaces .collect(Collectors.toList()) with .toList(), as required by the
project's testNoCollectorsToList architecture rule. No callers mutate the
returned list, so the immutable List returned by .toList() is safe.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>